--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docs:dev": "vuepress dev docs"
   },
   "devDependencies": {
+    "@starzkg/vuepress-plugin-baidu-analytics": "^1.0.0-beta.16",
     "vuepress": "^2.0.0-beta.37",
     "vuepress-theme-hope": "^2.0.0-beta.33"
   },
