--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@starzkg/vuepress-plugin-baidu-analytics": "^1.0.0-beta.16",
     "vuepress": "^2.0.0-beta.37",
+    "vuepress-plugin-pwa2": "^2.0.0-beta.24",
     "vuepress-theme-hope": "^2.0.0-beta.33"
   },
   "dependencies": {
