--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tca-monthly",
-  "version": "1.0.0",
-  "description": "A project of vuepress-theme-hope",
+  "name": "aneot",
+  "version": "1.1.0",
+  "description": "Another End of Terra",
   "license": "MIT",
   "scripts": {
     "docs:build": "vuepress build docs",
@@ -9,13 +9,10 @@
     "docs:dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@starzkg/vuepress-plugin-baidu-analytics": "^1.0.0-beta.16",
-    "vuepress": "^2.0.0-beta.37",
-    "vuepress-plugin-pwa2": "^2.0.0-beta.24",
-    "vuepress-theme-hope": "^2.0.0-beta.33"
-  },
-  "dependencies": {
-    "pangu": "^4.0.7",
-    "vuepress-plugin-pangu": "^1.0.1"
+    "@vuepress/client": "^2.0.0-beta.48",
+    "@vuepress/plugin-search": "^2.0.0-beta.48",
+    "vue": "^3.2.36",
+    "vuepress": "^2.0.0-beta.48",
+    "vuepress-theme-hope": "^2.0.0-beta.84"
   }
 }
