--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "docs:dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.48",
+    "@vuepress/client": "^2.0.0-beta.51",
     "@vuepress/plugin-register-components": "^2.0.0-beta.51",
-    "@vuepress/plugin-search": "^2.0.0-beta.48",
+    "@vuepress/plugin-search": "^2.0.0-beta.51",
     "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.48",
-    "vuepress-theme-hope": "^2.0.0-beta.84"
+    "vuepress": "^2.0.0-beta.51",
+    "vuepress-theme-hope": "^2.0.0-beta.110"
   },
   "dependencies": {
+    "@vuepress/utils": "2.0.0-beta.51",
     "vue-scriptx": "^0.2.5"
   }
 }
