--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@vuepress/plugin-search": "^2.0.0-beta.51",
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.51",
+    "vuepress-plugin-comment2": "2.0.0-beta.110",
     "vuepress-theme-hope": "^2.0.0-beta.110"
   },
   "dependencies": {
     "@vuepress/utils": "2.0.0-beta.51",
-    "vue-scriptx": "^0.2.5"
+    "vue-scriptx": "^0.2.5",
+    "vuepress-plugin-alert": "^0.0.5"
   }
 }
