--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "aneot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Another End of Terra",
-  "license": "MIT",
+  "license": "MIT for code, Reserved for textual contents",
   "scripts": {
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
     "docs:dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.51",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
-    "@vuepress/plugin-search": "^2.0.0-beta.51",
-    "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.51",
-    "vuepress-plugin-comment2": "2.0.0-beta.110",
-    "vuepress-theme-hope": "^2.0.0-beta.110"
+    "@vuepress/client": "^2.0.0-beta.60",
+    "@vuepress/plugin-register-components": "2.0.0-beta.60",
+    "@vuepress/plugin-search": "2.0.0-beta.60",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-plugin-comment2": "2.0.0-beta.156",
+    "vuepress-theme-hope": "2.0.0-beta.156"
   },
   "dependencies": {
-    "@vuepress/utils": "2.0.0-beta.51",
+    "@vuepress/utils": "2.0.0-beta.60",
     "vue-scriptx": "^0.2.5",
     "vuepress-plugin-alert": "^0.0.5"
   }
