--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aneot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Another End of Terra",
   "license": "MIT",
   "scripts": {
@@ -9,17 +9,17 @@
     "docs:dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.51",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
-    "@vuepress/plugin-search": "^2.0.0-beta.51",
-    "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.51",
-    "vuepress-plugin-comment2": "2.0.0-beta.110",
-    "vuepress-theme-hope": "^2.0.0-beta.110"
+    "@vuepress/client": "2.0.0-beta.60",
+    "@vuepress/plugin-register-components": "2.0.0-beta.60",
+    "@vuepress/plugin-search": "2.0.0-beta.60",
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-plugin-comment2": "2.0.0-beta.177",
+    "vuepress-theme-hope": "2.0.0-beta.177"
   },
   "dependencies": {
-    "@vuepress/utils": "2.0.0-beta.51",
+    "@vuepress/utils": "2.0.0-beta.60",
     "vue-scriptx": "^0.2.5",
-    "vuepress-plugin-alert": "^0.0.5"
+    "vuepress-plugin-alert": "0.0.5"
   }
 }
