new feature and minor fix

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs"
+    "docs:dev": "vuepress dev docs",
+    "docs:prod": "live-server docs/.vuepress/dist",
+    "upgrade": "pnpm dlx vp-update"
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.60",
