--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuepress-theme-hope": "2.0.0-beta.177"
   },
   "dependencies": {
+    "@vuepress/core": "2.0.0-beta.60",
     "@vuepress/utils": "2.0.0-beta.60",
     "vue-scriptx": "^0.2.5",
     "vuepress-plugin-alert": "0.0.5"
