--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "vuepress-theme-hope": "2.0.0-beta.177"
   },
   "dependencies": {
+    "@vue/component-compiler-utils": "^3.3.0",
+    "@vuepress/plugin-pwa": "^1.9.9",
+    "@vuepress/plugin-pwa-popup": "2.0.0-alpha.8",
     "@vuepress/utils": "2.0.0-beta.60",
     "vue-scriptx": "^0.2.5",
     "vuepress-plugin-alert": "0.0.5"
