--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -8,7 +8,7 @@
     "description": "明日方舟同人杂志《回归线》",
     "icons": [
       {
-        "src": "/logo.png",
+        "src": "/eod.png",
         "sizes": "256x247",
         "type": "image/png"
       }
