--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.60",
-    "@vuepress/plugin-pwa": "^2.0.0-beta.66",
-    "@vuepress/plugin-pwa-popup": "^2.0.0-beta.66",
+    "@vuepress/plugin-pwa": "2.0.0-beta.60",
+    "@vuepress/plugin-pwa-popup": "2.0.0-beta.60",
     "@vuepress/plugin-register-components": "2.0.0-beta.60",
     "@vuepress/plugin-search": "2.0.0-beta.60",
-    "vue": "^3.2.47",
+    "vue": "3.2.47",
     "vuepress": "2.0.0-beta.60",
     "vuepress-plugin-comment2": "2.0.0-beta.177",
     "vuepress-plugin-copyright2": "2.0.0-beta.177",
