--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -3,6 +3,7 @@
     "short_name": "AnEot",
     "start_url": "/",
     "display": "standalone",
+    "id": "aneot.terrach.net",
     "background_color": "#fff",
     "theme_color": "#46f9fa", 
     "description": "明日方舟同人杂志《回归线》",
