--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aneot",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Another End of Terra",
   "license": "MIT",
   "scripts": {
@@ -11,19 +11,21 @@
     "upgrade": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.60",
-    "@vuepress/plugin-pwa": "2.0.0-beta.60",
-    "@vuepress/plugin-register-components": "2.0.0-beta.60",
-    "@vuepress/plugin-search": "2.0.0-beta.60",
-    "vue": "3.2.47",
-    "vuepress": "2.0.0-beta.60",
-    "vuepress-plugin-comment2": "2.0.0-beta.177",
-    "vuepress-plugin-pwa2": "2.0.0-beta.177",
-    "vuepress-theme-hope": "2.0.0-beta.177"
+    "@vuepress/bundler-vite": "2.0.0-rc.2",
+    "@vuepress/plugin-register-components": "2.0.0-rc.7",
+    "@vuepress/plugin-search": "2.0.0-rc.7",
+    "vuepress-plugin-comment2": "2.0.0-rc.19",
+    "vuepress-plugin-search-pro": "2.0.0-rc.19",
+    "vuepress-theme-hope": "2.0.0-rc.19",
+    "vue": "^3.4.15",
+    "vuepress": "2.0.0-rc.2"
   },
   "dependencies": {
-    "@vuepress/utils": "2.0.0-beta.60",
+    "@vuepress/plugin-feed": "2.0.0-rc.7",
+    "@waline/client": "3.0.0-alpha.11",
+    "markdown-it": "^14.0.0",
     "vue-scriptx": "^0.2.5",
-    "vuepress-plugin-alert": "0.0.5"
+    "vuepress-plugin-alert": "0.0.5",
+    "vuepress-plugin-pwa2": "2.0.0-rc.19"
   }
 }
