--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuepress": "2.0.0-rc.7"
   },
   "dependencies": {
+    "@vuepress/plugin-feed": "2.0.0-rc.14",
     "@waline/client": "3.0.0-alpha.11",
     "markdown-it": "^14.0.0",
     "vue-scriptx": "^0.2.5",
