--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.7",
-    "@vuepress/plugin-register-components": "2.0.0-rc.12",
+    "@vuepress/plugin-register-components": "2.0.0-rc.15",
     "@vuepress/plugin-search": "2.0.0-rc.12",
+    "vue": "^3.4.15",
+    "vuepress": "2.0.0-rc.7",
     "vuepress-plugin-comment2": "2.0.0-rc.23",
     "vuepress-plugin-search-pro": "2.0.0-rc.23",
-    "vuepress-theme-hope": "2.0.0-rc.23",
-    "vue": "^3.4.15",
-    "vuepress": "2.0.0-rc.7"
+    "vuepress-theme-hope": "2.0.0-rc.23"
   },
   "dependencies": {
     "@vuepress/plugin-feed": "2.0.0-rc.14",
