--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aneot",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Another End of Terra",
   "license": "MIT",
   "scripts": {
@@ -11,19 +11,20 @@
     "upgrade": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.8",
-    "@vuepress/plugin-register-components": "2.0.0-rc.15",
-    "@vuepress/plugin-search": "2.0.0-rc.18",
+    "@vuepress/bundler-vite": "2.0.0-rc.9",
+    "@vuepress/plugin-comment": "2.0.0-rc.21",
+    "@vuepress/plugin-register-components": "2.0.0-rc.21",
+    "@vuepress/plugin-search": "2.0.0-rc.21",
     "vue": "^3.4.21",
-    "vuepress": "2.0.0-rc.8",
-    "vuepress-plugin-comment2": "2.0.0-rc.27",
-    "vuepress-plugin-search-pro": "2.0.0-rc.27",
-    "vuepress-theme-hope": "2.0.0-rc.27"
+    "vuepress": "2.0.0-rc.9",
+    "vuepress-plugin-search-pro": "2.0.0-rc.32",
+    "vuepress-theme-hope": "2.0.0-rc.32"
   },
   "dependencies": {
-    "@vuepress/plugin-feed": "2.0.0-rc.18",
-    "@waline/client": "3.0.0-alpha.11",
-    "markdown-it": "^14.0.0",
+    "@vuepress/plugin-comment": "2.0.0-rc.21",
+    "@vuepress/plugin-feed": "2.0.0-rc.21",
+    "@waline/client": "3.1.3",
+    "markdown-it": "^14.1.0",
     "vue-scriptx": "^0.2.5",
     "vuepress-plugin-alert": "0.0.5",
     "vuepress-plugin-pwa2": "2.0.0-rc.24"
