--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "upgrade": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "@vuepress/plugin-comment": "2.0.0-rc.24",
-    "@vuepress/plugin-register-components": "2.0.0-rc.21",
-    "@vuepress/plugin-search": "2.0.0-rc.24",
-    "vue": "^3.4.21",
-    "vuepress": "2.0.0-rc.9",
-    "vuepress-plugin-search-pro": "2.0.0-rc.34",
-    "vuepress-theme-hope": "2.0.0-rc.34"
+    "@vuepress/bundler-vite": "2.0.0-rc.11",
+    "@vuepress/plugin-comment": "2.0.0-rc.30",
+    "@vuepress/plugin-register-components": "2.0.0-rc.30",
+    "@vuepress/plugin-search": "2.0.0-rc.30",
+    "vue": "^3.4.27",
+    "vuepress": "2.0.0-rc.11",
+    "vuepress-plugin-search-pro": "2.0.0-rc.43",
+    "vuepress-theme-hope": "2.0.0-rc.43"
   },
   "dependencies": {
-    "@vuepress/plugin-comment": "2.0.0-rc.24",
-    "@vuepress/plugin-feed": "2.0.0-rc.24",
-    "@waline/client": "3.1.3",
+    "@vuepress/plugin-comment": "2.0.0-rc.30",
+    "@vuepress/plugin-feed": "2.0.0-rc.30",
+    "@vuepress/plugin-pwa": "2.0.0-rc.30",
+    "@waline/client": "3.2.0",
     "markdown-it": "^14.1.0",
     "vue-scriptx": "^0.2.5",
-    "vuepress-plugin-alert": "0.0.5",
-    "vuepress-plugin-pwa2": "2.0.0-rc.24"
+    "vuepress-plugin-alert": "0.0.5"
   }
 }
