--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "id": "aneot.terrach.net",
     "background_color": "#fff",
-    "theme_color": "#fcb5c3", 
+    "theme_color": "#f4c6d3", 
     "description": "明日方舟同人杂志《回归线》",
     "update": "force",
     "icons": [
