--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "id": "aneot.terrach.net",
     "background_color": "#fff",
-    "theme_color": "#771b15",
+    "theme_color": "#f7b5c0",
     "description": "明日方舟同人杂志《回归线》",
     "update": "force",
     "icons": [
