--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aneot",
-  "version": "1.3.6",
-  "description": "Another End of Terra",
+  "name": "blog",
+  "version": "1.3.0",
+  "description": "Rosmontis' Blog",
   "license": "MIT",
   "scripts": {
     "docs:build": "vuepress build docs",
@@ -11,19 +11,19 @@
     "upgrade": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.18",
-    "@vuepress/plugin-comment": "2.0.0-rc.61",
-    "@vuepress/plugin-register-components": "2.0.0-rc.54",
-    "@vuepress/plugin-search": "2.0.0-rc.61",
+    "@vuepress/bundler-vite": "2.0.0-rc.19",
+    "@vuepress/plugin-comment": "2.0.0-rc.74",
+    "@vuepress/plugin-register-components": "2.0.0-rc.66",
+    "@vuepress/plugin-search": "2.0.0-rc.74",
+    "@vuepress/plugin-slimsearch": "2.0.0-rc.74",
     "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.18",
-    "vuepress-plugin-search-pro": "2.0.0-rc.59",
-    "vuepress-theme-hope": "2.0.0-rc.59"
+    "vuepress": "2.0.0-rc.19",
+    "vuepress-theme-hope": "2.0.0-rc.71"
   },
   "dependencies": {
-    "@vuepress/plugin-comment": "2.0.0-rc.61",
-    "@vuepress/plugin-feed": "2.0.0-rc.61",
-    "@vuepress/plugin-pwa": "2.0.0-rc.61",
+    "@vuepress/plugin-comment": "2.0.0-rc.74",
+    "@vuepress/plugin-feed": "2.0.0-rc.74",
+    "@vuepress/plugin-pwa": "2.0.0-rc.74",
     "@waline/client": "3.3.0",
     "markdown-it": "^14.1.0",
     "vue-scriptx": "^0.2.7",
