更新到 Vol. 26 - 2025 年 05 月号：被联系的

--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "id": "aneot.terrach.net",
     "background_color": "#fff",
-    "theme_color": "#bb3040",
+    "theme_color": "#92b2e5",
     "description": "明日方舟同人杂志《回归线》",
     "update": "force",
     "icons": [
