--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blog",
+  "name": "aneot",
   "version": "1.3.0",
-  "description": "Rosmontis' Blog",
+  "description": "Another End of Terra",
   "license": "MIT",
   "scripts": {
     "docs:build": "vuepress build docs",
