更新主题色及最新期刊链接

--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "回归线",
-    "short_name": "AnEot",
+    "short_name": "AnEoT",
     "start_url": "/",
     "display": "standalone",
     "id": "aneot.terrach.net",
     "background_color": "#fff",
-    "theme_color": "#92b2e5",
+    "theme_color": "#2b386a",
     "description": "明日方舟同人杂志《回归线》",
     "update": "force",
     "icons": [
