--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "AnEoT",
     "start_url": "/",
     "display": "standalone",
-    "id": "aneot.terrach.net",
+    "id": "aneot.arktca.com",
     "background_color": "#fff",
     "theme_color": "#2b386a",
     "description": "明日方舟同人杂志《回归线》",
